# 3CAT8-ControlTuning-adcs

./: .gitignore  CMakeLists.txt  README.md
aero-model-demo/: 3cat8_geometry.mat  Aerodynamic_forces.m  README.md  aerodynamic_torque.m  data_generator.m  euler2rot.m  expspace.m  flat_plate_torques.m  plane_intersection_test.m  point_line_intersection.m  polygon_centroid.m  rasterizer_shading.m  triangle_test.m
aero-model-demo/formatted_functions/: 3cat8_geometry.mat  3cat8_geometry_antenna.mat  3cat8_geometry_bare.mat  3cat8_geometry_panel.mat  aerodynamic_torque.m  (+6 more)
data/: montecarlo_cascade_results.csv  montecarlo_results.csv  orbit_file.csv  pso_best_history.csv  pso_results.csv
include/: actuator_functions.hpp  algebraic_functions.h  constants.h  control_functions.h  disturbance_torques.hpp  orbit_functions.hpp  satellite_shape_model.hpp  simulation_runner.hpp  simulation_runner_cascade.hpp  simulation_utils.hpp  space_environment.h  surface_torques_model.hpp
parameters/: astronomical_parameters.json  satellite_parameters.json
src/: MainSimulation_Cascade.cpp  Main_Simulation.cpp  Main_Simulation_new_cost.cpp  MonteCarlo_Cascade.cpp  MonteCarlo_Main.cpp  PSO_Main.cpp  PSO_Main_adapted.cpp  actuator_functions.cpp  algebraic_functions.c  control_functions.c  disturbance_torques.cpp  main.cpp  main_json_cost.cpp  main_json_cost_best_gains.cpp  orbit_functions.cpp  simulation_utils.cpp  space_environment.c  surface_torques_model.cpp
styles/: pretty_plots.mplstyle
visualization/: 3D_visualizer.py  control_visualizer.py  new_visualizer.py  orbit_visualizer.py
(+10 files in other folders)
